infra/gcloud/bases/todo/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo
spec:
  hosts:
  - '*'
  gateways:
  - todo-gateway
  http:
  - match:
    - uri:
        prefix: /api
    rewrite:
      uri: /
    route:
    - destination:
        host: todo
        port:
          number: 9080
#      corsPolicy:
#        allowOrigin:
#        - "*"
#        allowMethods:
#        - POST
#        - GET
#        - OPTIONS
#        - PUT
#        - DELETE
#        - PATCH
#        allowHeaders:
#        - "authorization"
#        - "dnt"
#        - "user-agent"
#        - "x-requested-with"
#        - "if-modified-since"
#        - "cache-control"
#        - "content-type"
#        - "range"
#        - "x-xsrf-token"
#        exposeHeaders:
#        - "content-length"
#        - "content-range"
#        maxAge: "86400s"
